[package]
name = "data_cleaner_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
polars = { version = "0.38", features = ["lazy", "csv"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
actix-files = "0.6"

